<resources>
    <string name="app_name">Music Player</string>
    <string name="start_screen_radio_button">Radio</string>
    <string name="start_screen_music_button">Music</string>
    <string name="title_activity_album_music">AlbumMusicActivity</string>
    <string name="music_screen_album_button">Albums</string>
    <string name="music_screen_artist_button">Artists</string>
    <string name="music_screen_song_button">Songs</string>
    <string name="music_screen_playing_now_button">Playing Now</string>
    <string name="radio_screen_trending_button">Trending</string>
    <string name="radio_screen_global_button">Global</string>
    <string name="radio_screen_local_button">Local</string>
    <string name="radio_screen_favorites_button">Favorites</string>

    <string name="main_menu_label">Main Menu</string>
    <string name="music_menu_label">Music Menu</string>
    <string name="radio_menu_label">Radio Menu</string>
    <string name="payment_label">Payment</string>

    <string name="music_albums_label">Albums</string>
    <string name="music_artists_label">Artists</string>
    <string name="music_songs_label">Songs</string>
    <string name="music_playing_now_label">Playing Now</string>

    <string name="radio_trending_label">Trending Stations</string>
    <string name="radio_global_label">Global Stations</string>
    <string name="radio_local_label">Local Stations</string>
    <string name="radio_playing_now_label">Playing Now</string>
</resources>
