<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayer.RadioActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="showTrendingStations"
        android:stateListAnimator="@drawable/menu_button_state_animator">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending_button" />

        <TextView
            android:id="@+id/textView3"
            style="@style/MusicScreenButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radio_screen_trending_button"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="showGlobalStations"
        android:stateListAnimator="@drawable/menu_button_state_animator">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/global_button" />

        <TextView
            style="@style/MusicScreenButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radio_screen_global_button"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="showLocalStations"
        android:stateListAnimator="@drawable/menu_button_state_animator">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/local_button" />

        <TextView
            android:id="@+id/textView"
            style="@style/MusicScreenButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radio_screen_local_button"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="showFavoriteStations"
        android:stateListAnimator="@drawable/menu_button_state_animator">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/favorites_button" />

        <TextView
            android:id="@+id/textView2"
            style="@style/MusicScreenButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radio_screen_favorites_button"
            android:textColor="@android:color/white" />

    </FrameLayout>


</LinearLayout>
